feat: 1. 支持项目打包 + 增删改
