# app/api/project.go
@@ -23,6 +23,18 @@ func (*projectApi) List(r *ghttp.Request) {
 	response.JsonExit(r, 0, "ok", data)
 }
 
+// @summary 获取单个项目
+// @tags    项目管理
+// @produce json
+// @param  id  query string true "项目ID"
+// @router  /api/project/info [GET]
+// @success 200 {object} response.JsonResponse "执行结果"
+func (*projectApi) Info(r *ghttp.Request) {
+	id := r.GetInt("id")
+	data, _ := dao.Project.One("id", id)
+	response.JsonExit(r, 0, "ok", data)
+}
+
 // @summary 创建项目
 // @tags    项目管理
 // @produce json
